--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -13,6 +13,9 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- CSS ADMIN -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/admin/styleAdmin.css') }}">
 </head>
@@ -67,7 +70,6 @@
     <main>
         <div class="container admin-main">
 
-            
             {% block content %}
             {% endblock %}
 
@@ -79,5 +81,7 @@
         <p>&copy; 2025 EvalyQuiz - Espace Admin. Tous droits réservés.</p>
     </footer>
 
+    <!-- ===== BOOTSTRAP JS ===== -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
