modified:   organigramme.drawio 	modified:   routes/admin.py 	modified:   static/css/admin/styleAdmin.css 	modified:   templates/admin/base_admin.html 	new file:   templates/admin/create_examen.html 	new file:   templates/admin/edit_examen.html 	new file:   templates/admin/gestion_exam.html 	modified:   templates/admin/gestion_users.html 	new file:   templates/admin/reports.html

--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -49,8 +49,8 @@
                 <a href="#">
                     <i class="fa-solid fa-chart-simple"></i> Résultats
                 </a>
-                <a href="#">
-                    <i class="fa-solid fa-gear"></i> Paramètres
+                <a href="/logout">
+                    <i class="fa-solid fa-gear"></i> déconnexion
                 </a>
             </nav>
 
