modified:   quiz.db 	modified:   routes/admin.py 	modified:   templates/admin/admin.html 	modified:   templates/admin/base_admin.html 	modified:   templates/admin/create_examen.html 	modified:   templates/admin/edit_examen.html 	modified:   templates/admin/gestion_exam.html

--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -43,7 +43,7 @@
                 <a href="#">
                     <i class="fa-solid fa-users"></i> Utilisateurs
                 </a>
-                <a href="#">
+                <a href="/gestion_examens">
                     <i class="fa-solid fa-file-circle-check"></i> Examens
                 </a>
                 <a href="#">
