--- a/templates/admin/edit_examen.html
+++ b/templates/admin/edit_examen.html
@@ -2,7 +2,7 @@
 {% block title %}Éditer examen : {{ exam.titre }}{% endblock %}
 
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/enseignant/styleEditQuiz.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/admin/styleEditQuiz.css') }}">
 
 <div class="quiz-edit-container">
 
