--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -37,16 +37,16 @@
 
             <!-- Navigation -->
             <nav class="admin-nav">
-                <a href="#">
+                <a href="/dashboard">
                     <i class="fa-solid fa-gauge-high"></i> Tableau de bord
                 </a>
-                <a href="#">
+                <a href="{{ url_for('admin.gestion_users') }}">
                     <i class="fa-solid fa-users"></i> Utilisateurs
                 </a>
-                <a href="/gestion_examens">
+                <a href="{{ url_for('admin.gestion_examens') }}">
                     <i class="fa-solid fa-file-circle-check"></i> Examens
                 </a>
-                <a href="#">
+                <a href="{{ url_for('admin.exam_results') }}">
                     <i class="fa-solid fa-chart-simple"></i> Résultats
                 </a>
                 <a href="/logout">
