Admin : correction des routes et ajout de la page de rapports

--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -46,7 +46,7 @@
                 <a href="/gestion_examens">
                     <i class="fa-solid fa-file-circle-check"></i> Examens
                 </a>
-                <a href="#">
+                <a href="/admin/reports">
                     <i class="fa-solid fa-chart-simple"></i> Résultats
                 </a>
                 <a href="/logout">
